2010-08-06  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/ParserDirector.tcc: Add debug output.

	* include/BridgeRulesBuilder.tcc: Add some assertions for local
	and neighbor ids.

2010-07-25  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/tests/testClaspOnlineParser.cpp: Make it a Boost.Test case.
	Rename.
	* src/tests/clasp-parser-full.cpp: Likewise.

	* src/tests/result.sat: Move to examples.
	* examples/result.sat: Likewise.

	* src/tests/Makefile.am: Add testClaspOnlineParser test.

2010-07-24  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/tests/clasp-parser-full.cpp: New file.

2010-07-23  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/dmcsd.cpp (main): Add assertion for system size

2010-07-20  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/ProcessBuf.cpp: Add SIGCHLD signal handler.

	* src/tests/testClasp.cpp: Compileable again.
	* src/tests/testTranslation.cpp: Likewise.

	* examples/clasp-result.txt: Terminate models with 0.

	* TODO: Update.

2010-06-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/ClaspResultGrammar.tcc: Fix to SAT'09 & clasp 1.3.4
	result format (0 was missing).
	* include/ClaspResultGrammar.h: Likewise.
	* include/ClaspResultBuilder.tcc: Likewise.
	* examples/dimacs-small-result.txt: Likewise.

	* configure.ac: Check for clasp >= 1.3.4.

2010-06-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/run-tests.sh: Update run-tests.

	* include/Cache.h: Include map.

2010-05-07  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/DLVVisitor.cpp: Need 'a' - 1.
	* src/LogicVisitor.cpp: Likewise.
	* src/genTest.cpp: Likewise.

	* src/BeliefCombination.cpp: Add a remark for a chance to improve
	projection.

2010-05-07  Seif El-Din Bairakdar  <seif.bairakdar@gmail.com>

	* src/ContextGenerator.cpp: Clean up

2010-05-07  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/genTest.cpp: Use a single srand(). 
	* src/QueryPlanGenerator.cpp: Likewise.
